--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GemeenteAmsterdam BMV</title>
-    <script src="https://kit.fontawesome.com/cb4527b064.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/cb4527b064.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -18,9 +21,15 @@
               <img src="img/gemeente.png" alt="" class="header__logoimg" />
             </figure>
           </div>
-          <li class="header__li"> <a href="" class="header__link">Organisatie</a></li>
-          <li class="header__li"> <a href="" class="header__link">Projecten</a></li>
-          <li class="header__li"> <a href="" class="header__link">Werken bij</a></li>
+          <li class="header__li">
+            <a href="" class="header__link">Organisatie</a>
+          </li>
+          <li class="header__li">
+            <a href="" class="header__link">Projecten</a>
+          </li>
+          <li class="header__li">
+            <a href="" class="header__link">Werken bij</a>
+          </li>
         </ul>
       </header>
       <div class="home__wrapperText">
@@ -28,12 +37,84 @@
         <h3 class="home__h3">Creatief, deskundig en betrouwbaar</h3>
       </div>
       <figure class="home__buttonWrapper">
-        <a class="home__arrowLink" href=""
+        <a class="home__arrowLink" href="#about"
           ><button class="home__arrowButton">
-            <i class=" home__arrowI fa-solid fa-arrow-down"></i>
-           </button
+            <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
-          </figure>
+      </figure>
     </section>
+    <section class="about">
+      <h2 id="about" class="about__h2">
+        Bouwmanagement en Maatschappelijk Vastgoed
+      </h2>
+      <figure class="about__imgFigure">
+        <img src="img/about.jpg" alt="" class="about__img" />
+      </figure>
+      <h2 class="about__h2">Bijdragen aan een toekomstbestendige stad</h2>
+      <p class="about__text">
+        Een sociaal-duurzaam Amsterdam Voor veel mensen is en blijft Amsterdam
+        een zeer aantrekkelijke plek om te wonen en dus blijven we bouwen aan de
+        groei van de stad.
+      </p>
+      <p class="about__text">
+        Maar Amsterdam bestaat natuurlijk uit méér dan alleen woningen. Daarom
+        bouwen we aan een sociaal-duurzaam Amsterdam: een stad die het welzijn
+        van haar bewoners belangrijk vindt en verbetert, door niet alleen
+        woningen te bouwen maar ook te zorgen voor maatschappelijke
+        voorzieningen, voor huidige bewoners en toekomstige generaties.
+      </p>
+      <figure class="about__imgFigure2">
+        <img src="img/about2.jpg" alt="" class="about__img" />
+      </figure>
+    </section>
+    <section class="nextPage">
+      <article class="nextPage__card">
+        <h2 class="nextPage__h2">Organisatie</h2>
+        <figure class="nextPage__figureImg">
+          <img src="img/organisatie.jpg" alt="" class="nextPage__img" />
+        </figure>
+        <p class="nextPage__p">
+          De BMV van de Gemeente Amsterdam is de spil van gemeenschapsdiensten. Wij streven ernaar een inclusieve omgeving te bieden, met diensten variërend van onderwijs tot zorg en cultuur. Samen bouwen we aan een welvarende en verbonden gemeenschap.
+        </p>
+        <figure class="nextPage__buttonWrapper">
+          <a class="nextPage__arrowLink" href="#about"
+            ><button class="nextPage__arrowButton">
+              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+          ></a>
+        </figure>
+      </article>
+      <article class="nextPage__card">
+        <h2 class="nextPage__h2">Projecten</h2>
+        <figure class="nextPage__figureImg">
+          <img src="img/projecten.jpg" alt="" class="nextPage__img" />
+        </figure>
+        <p class="nextPage__p">
+          Ontdek de innovatieve projecten van de BMV Gemeente Amsterdam. Van duurzaamheid tot sociale betrokkenheid, onze projecten zijn gericht op het verbeteren van het dagelijks leven in de stad. Samen werken we aan een betere toekomst voor alle inwoners.
+        </p>
+        <figure class="nextPage__buttonWrapper">
+          <a class="nextPage__arrowLink" href="#about"
+            ><button class="nextPage__arrowButton">
+              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+          ></a>
+        </figure>
+      </article>
+      <article class="nextPage__card">
+        <h2 class="nextPage__h2">Werken bij</h2>
+        <figure class="nextPage__figureImg">
+          <img src="img/werkenbij.jpg" alt="" class="nextPage__img" />
+        </figure>
+        <p class="nextPage__p">
+          Maak deel uit van de BMV Gemeente Amsterdam en draag bij aan het vormgeven van onze gemeenschap. Ontdek boeiende carrièremogelijkheden in een inclusieve omgeving. Samen creëren we een betere plek om te wonen en te werken.
+        </p>
+        <figure class="nextPage__buttonWrapper">
+          <a class="nextPage__arrowLink" href="#about"
+            ><button class="nextPage__arrowButton">
+              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+          ></a>
+        </figure>
+      </article>
+    </section>
+    
+    <!-- <footer class="footer"></footer> -->
   </body>
 </html>
