beginpage af zonder animatie

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </ul>
       </header>
       <div class="home__wrapperText">
-        <h2 class="home__h2">Wij bouwen met passie</h2>
-        <h3 class="home__h3">Creatief, deskundig en betrouwbaar</h3>
+        <h2 class="home__h2">Wij bouwen met </h2>
+        <h3 class="home__h3">passie,Creatief, deskundig en betrouwbaar</h3>
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#about"
@@ -43,8 +43,8 @@
         ></a>
       </figure>
     </section>
-    <section class="about">
-      <h2 id="about" class="about__h2">
+    <section id="about" class="about">
+      <h2 class="about__h2">
         Bouwmanagement en Maatschappelijk Vastgoed
       </h2>
       <figure class="about__imgFigure">
@@ -74,12 +74,15 @@
           <img src="img/organisatie.jpg" alt="" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
-          De BMV van de Gemeente Amsterdam is de spil van gemeenschapsdiensten. Wij streven ernaar een inclusieve omgeving te bieden, met diensten variërend van onderwijs tot zorg en cultuur. Samen bouwen we aan een welvarende en verbonden gemeenschap.
+          De BMV van de Gemeente Amsterdam is de spil van gemeenschapsdiensten.
+          Wij streven ernaar een inclusieve omgeving te bieden, met diensten
+          variërend van onderwijs tot zorg en cultuur. Samen bouwen we aan een
+          welvarende en verbonden gemeenschap.
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="#about"
             ><button class="nextPage__arrowButton">
-              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+              <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
       </article>
@@ -89,12 +92,15 @@
           <img src="img/projecten.jpg" alt="" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
-          Ontdek de innovatieve projecten van de BMV Gemeente Amsterdam. Van duurzaamheid tot sociale betrokkenheid, onze projecten zijn gericht op het verbeteren van het dagelijks leven in de stad. Samen werken we aan een betere toekomst voor alle inwoners.
+          Ontdek de innovatieve projecten van de BMV Gemeente Amsterdam. Van
+          duurzaamheid tot sociale betrokkenheid, onze projecten zijn gericht op
+          het verbeteren van het dagelijks leven in de stad. Samen werken we aan
+          een betere toekomst voor alle inwoners.
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="#about"
             ><button class="nextPage__arrowButton">
-              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+              <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
       </article>
@@ -104,17 +110,49 @@
           <img src="img/werkenbij.jpg" alt="" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
-          Maak deel uit van de BMV Gemeente Amsterdam en draag bij aan het vormgeven van onze gemeenschap. Ontdek boeiende carrièremogelijkheden in een inclusieve omgeving. Samen creëren we een betere plek om te wonen en te werken.
+          Maak deel uit van de BMV Gemeente Amsterdam en draag bij aan het
+          vormgeven van onze gemeenschap. Ontdek boeiende carrièremogelijkheden
+          in een inclusieve omgeving. Samen creëren we een betere plek om te
+          wonen en te werken.
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="#about"
             ><button class="nextPage__arrowButton">
-              <i class=" nextPage__arrowI fa-solid fa-arrow-right"></i></button
+              <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
       </article>
     </section>
+
+    <footer class="footer">
+      <ul class="footer__ul">
+        <li class="footer__li">
+          <h2 class="footer__h2">Mail</h2>
+          <p class="footer__p">PMB is bereikbaar op werkdagen tussen 8.30 - 17.30 uur.</p>
+          <a href="https://www.amsterdam.nl/pmb/contact/" target="_blank" class="footer__link">Contact</a>
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Volg het ProjectManagement Bureau</h2>
+          <div class="footer__linkWrapper">
+            <a href="https://twitter.com/PMB020" target="_blank" class="footer__link">Twitter</a>
+            <a href="https://www.linkedin.com/company/projectmanagement-bureau" target="_blank" class="footer__link">Linkedin</a>
+          </div>
     
-    <!-- <footer class="footer"></footer> -->
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Over deze website</h2>
+          <div class="footer__linkWrapper">
+            <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/colofon/" target="_blank" class="footer__link">Colofon</a>
+            <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/proclaimer-copyright/" target="_blank" class="footer__link">Proclaimer en Copyright</a>
+            <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/sitemap/" target="_blank" class="footer__link">Sitemap</a>
+          </div>
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Amsterdam.nl</h2>
+          <p class="footer__p">Nieuws en publieksinformatie van de gemeente Amsterdam vindt u op amsterdam.nl</p>
+          <a href="https://www.amsterdam.nl/" target="_blank" class="footer__link">Naar amsterdam.nl</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
