--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       src="https://kit.fontawesome.com/cb4527b064.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://unpkg.com/vue@next" defer></script>
@@ -24,18 +27,21 @@
             </figure>
           </div>
           <li class="header__li">
-            <a href="" class="header__link">Organisatie</a>
+            <a href="index.html" class="header__link">Home</a>
           </li>
           <li class="header__li">
-            <a href="" class="header__link">Projecten</a>
+            <a href="src/organisatie.html" class="header__link">Organisatie</a>
           </li>
           <li class="header__li">
-            <a href="" class="header__link">Werken bij</a>
+            <a href="src/projecten.html" class="header__link">Opdrachten en Projecten</a>
+          </li>
+          <li class="header__li">
+            <a href="src/werkenbij.html" class="header__link">Werken bij</a>
           </li>
         </ul>
       </header>
-      <div class="home__wrapperText">
-        <h2 class="home__h2">Wij bouwen met </h2>
+      <div class="home__wrapperText home__wrapperText--home">
+        <h2 class="home__h2 ">Wij bouwen met </h2>
         <h3  class="home__h3">{{ randomNumber() }}</h3>
       </div>
       <figure class="home__buttonWrapper">
@@ -82,7 +88,7 @@
           welvarende en verbonden gemeenschap.
         </p>
         <figure class="nextPage__buttonWrapper">
-          <a class="nextPage__arrowLink" href="#about"
+          <a class="nextPage__arrowLink" href="src/organisatie.html"
             ><button class="nextPage__arrowButton">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
@@ -100,7 +106,7 @@
           een betere toekomst voor alle inwoners.
         </p>
         <figure class="nextPage__buttonWrapper">
-          <a class="nextPage__arrowLink" href="#about"
+          <a class="nextPage__arrowLink" href="src/projecten.html"
             ><button class="nextPage__arrowButton">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
@@ -118,7 +124,7 @@
           wonen en te werken.
         </p>
         <figure class="nextPage__buttonWrapper">
-          <a class="nextPage__arrowLink" href="#about"
+          <a class="nextPage__arrowLink" href="src/werkenbij.html"
             ><button class="nextPage__arrowButton">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
@@ -136,14 +142,14 @@
         <li class="footer__li">
           <h2 class="footer__h2">Volg het ProjectManagement Bureau</h2>
           <div class="footer__linkWrapper">
-            <a href="https://twitter.com/PMB020" target="_blank" class="footer__link">Twitter</a>
-            <a href="https://www.linkedin.com/company/projectmanagement-bureau" target="_blank" class="footer__link">Linkedin</a>
+            <a href="https://twitter.com/PMB020" target="_blank" class="footer__link"><i class=" footer__icon fa-brands fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/company/projectmanagement-bureau" target="_blank" class="footer__link"><i class=" footer__icon fa-brands fa-linkedin"></i></a>
           </div>
     
         </li>
         <li class="footer__li">
           <h2 class="footer__h2">Over deze website</h2>
-          <div class="footer__linkWrapper">
+          <div class="footer__linkWrapper footer__linkWrapper--letter">
             <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/colofon/" target="_blank" class="footer__link">Colofon</a>
             <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/proclaimer-copyright/" target="_blank" class="footer__link">Proclaimer en Copyright</a>
             <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/sitemap/" target="_blank" class="footer__link">Sitemap</a>
