--- a/src/organisatie.html
+++ b/src/organisatie.html
@@ -9,9 +9,12 @@
       src="https://kit.fontawesome.com/cb4527b064.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../css/style.css" />
     <script src="https://unpkg.com/vue@next" defer></script>
@@ -76,7 +79,7 @@
         sport, spel, kunst en cultuur.
       </p>
       <figure class="about__imgFigure2">
-        <img src="../img/about2.jpg" alt="" class="about__img" />
+        <img src="../img/organisatie-1.jpg" alt="" class="about__img" />
       </figure>
 
       <p class="about__text">
@@ -88,7 +91,7 @@
       </p>
       <article class="about__card">
         <figure class="about__card--imgwrapper">
-          <img src="../img/about2.jpg" alt="" class="about__card--img" />
+          <img src="../img/organisatie-2.jpg" alt="" class="about__card--img" />
         </figure>
         <div class="about__card--textwrapper">
           <h2 class="about__card--h2">Onze Werkwijze</h2>
@@ -109,7 +112,7 @@
       </article>
     </section>
     <section class="werkwijze">
-      <h2  id="werkwijze" class="about__h2">Werkwijze</h2>
+      <h2 id="werkwijze" class="about__h2">Werkwijze</h2>
       <p class="about__text">
         BMV hanteert daarom een integrale aanpak: een kruisbestuiving tussen
         verschillende disciplines, uiteenlopend van proces-, project- en
@@ -118,7 +121,12 @@
         natuurlijk afhankelijk van het soort project:
       </p>
       <article class="werkwijze__card">
-        <!-- <p class="werkwijze__card--p">bestuurlijk adviseren van verschillende directies en het gemeentebestuur (het College van B&W en de gemeenteraad) in de verschillende beleidsfases</p> -->
+        <p class="werkwijze__card--p">
+          bestuurlijk adviseren van verschillende directies en het
+          gemeentebestuur
+          <i class="fa-solid fa-list"></i>
+        </p>
+
         <p class="werkwijze__card--p">
           opstellen van een programma van eisen
           <i class="fa-solid fa-helmet-safety"></i>
@@ -156,7 +164,7 @@
         aan de mogelijkheden in het gebied, de kosten en de planning.
       </p>
       <figure class="about__imgFigure2">
-        <img src="../img/about2.jpg" alt="" class="about__img" />
+        <img src="../img/organisatie-3.jpg" alt="" class="about__img" />
       </figure>
       <h2 class="about__h2">BMV-teams</h2>
       <h3 class="about__h3">
@@ -173,40 +181,82 @@
         In de teams hebben de betreffende medewerkers voldoende tijd om van
         elkaar te leren, innovatieve ideeën te ontwikkelen of zelfs met een
         compleet nieuwe aanpak te komen. Immers, een stad als Amsterdam staat –
-        net als het leven zelf – nooit stil. Kijk op de pagina <a class="werkwijze__link" target="_blank" href="projecten.html">Projecten</a> voor
-        meer informatie over recente projecten waar BMV aan bijdroeg of
+        net als het leven zelf – nooit stil. Kijk op de pagina
+        <a class="werkwijze__link" target="_blank" href="projecten.html"
+          >Projecten</a
+        >
+        voor meer informatie over recente projecten waar BMV aan bijdroeg of
         momenteel bij betrokken is
       </p>
     </section>
     <footer class="footer">
-        <ul class="footer__ul">
-          <li class="footer__li">
-            <h2 class="footer__h2">Mail</h2>
-            <p class="footer__p">PMB is bereikbaar op werkdagen tussen 8.30 - 17.30 uur.</p>
-            <a href="https://www.amsterdam.nl/pmb/contact/" target="_blank" class="footer__link">Contact</a>
-          </li>
-          <li class="footer__li">
-            <h2 class="footer__h2">Volg het ProjectManagement Bureau</h2>
-            <div class="footer__linkWrapper">
-              <a href="https://twitter.com/PMB020" target="_blank" class="footer__link"><i class=" footer__icon fa-brands fa-twitter"></i></a>
-              <a href="https://www.linkedin.com/company/projectmanagement-bureau" target="_blank" class="footer__link"><i class=" footer__icon fa-brands fa-linkedin"></i></a>
-            </div>
-      
-          </li>
-          <li class="footer__li">
-            <h2 class="footer__h2">Over deze website</h2>
-            <div class="footer__linkWrapper footer__linkWrapper--letter">
-              <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/colofon/" target="_blank" class="footer__link">Colofon</a>
-              <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/proclaimer-copyright/" target="_blank" class="footer__link">Proclaimer en Copyright</a>
-              <a href="https://www.amsterdam.nl/pmb/algemene-onderdelen/sitemap/" target="_blank" class="footer__link">Sitemap</a>
-            </div>
-          </li>
-          <li class="footer__li">
-            <h2 class="footer__h2">Amsterdam.nl</h2>
-            <p class="footer__p">Nieuws en publieksinformatie van de gemeente Amsterdam vindt u op amsterdam.nl</p>
-            <a href="https://www.amsterdam.nl/" target="_blank" class="footer__link">Naar amsterdam.nl</a>
-          </li>
-        </ul>
-      </footer>
+      <ul class="footer__ul">
+        <li class="footer__li">
+          <h2 class="footer__h2">Mail</h2>
+          <p class="footer__p">
+            PMB is bereikbaar op werkdagen tussen 8.30 - 17.30 uur.
+          </p>
+          <a
+            href="https://www.amsterdam.nl/pmb/contact/"
+            target="_blank"
+            class="footer__link"
+            >Contact</a
+          >
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Volg het ProjectManagement Bureau</h2>
+          <div class="footer__linkWrapper">
+            <a
+              href="https://twitter.com/PMB020"
+              target="_blank"
+              class="footer__link"
+              ><i class="footer__icon fa-brands fa-twitter"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/company/projectmanagement-bureau"
+              target="_blank"
+              class="footer__link"
+              ><i class="footer__icon fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Over deze website</h2>
+          <div class="footer__linkWrapper footer__linkWrapper--letter">
+            <a
+              href="https://www.amsterdam.nl/pmb/algemene-onderdelen/colofon/"
+              target="_blank"
+              class="footer__link"
+              >Colofon</a
+            >
+            <a
+              href="https://www.amsterdam.nl/pmb/algemene-onderdelen/proclaimer-copyright/"
+              target="_blank"
+              class="footer__link"
+              >Proclaimer en Copyright</a
+            >
+            <a
+              href="https://www.amsterdam.nl/pmb/algemene-onderdelen/sitemap/"
+              target="_blank"
+              class="footer__link"
+              >Sitemap</a
+            >
+          </div>
+        </li>
+        <li class="footer__li">
+          <h2 class="footer__h2">Amsterdam.nl</h2>
+          <p class="footer__p">
+            Nieuws en publieksinformatie van de gemeente Amsterdam vindt u op
+            amsterdam.nl
+          </p>
+          <a
+            href="https://www.amsterdam.nl/"
+            target="_blank"
+            class="footer__link"
+            >Naar amsterdam.nl</a
+          >
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
