--- a/src/projecten.html
+++ b/src/projecten.html
@@ -60,7 +60,7 @@
     </div>
 
     <section class="projecten">
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/spinoza.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--1">
           <h2 class="projecten__article--h2">Nieuwbouw Spinoza20first</h2>
           <p class="projecten__article--p">
@@ -68,7 +68,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/nieuwbouw.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--2">
           <h2 class="projecten__article--h2">Nieuwbouw AICS</h2>
           <p class="projecten__article--p">
@@ -77,7 +77,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/renovatiebos.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--3">
           <h2 class="projecten__article--h2">Renovatie Bostheater</h2>
           <p class="projecten__article--p">
@@ -85,7 +85,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/renovatiewereld.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--4">
           <h2 class="projecten__article--h2">Renovatie de Wereldburger</h2>
           <p class="projecten__article--p">
@@ -93,7 +93,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/renovatiemuseum.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--5">
           <h2 class="projecten__article--h2">
             Kwartiermaker Nationaal Slavernijmuseum
@@ -104,7 +104,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/renovatiemuseum.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--6">
           <h2 class="projecten__article--h2">Renovatie Amsterdam Museum</h2>
           <p class="projecten__article--p">
@@ -112,7 +112,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/afc.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--7">
           <h2 class="projecten__article--h2">
             Sportpark Goed Genoeg & Clubgebouw AFC
@@ -124,7 +124,7 @@
           </p>
         </article>
       </a>
-      <a href="" class="projecten__article--link">
+      <a href="../projecten/werven.html" class="projecten__article--link">
         <article class="projecten__article projecten__article--8">
           <h2 class="projecten__article--h2">
             Verbouwing en Nieuwbouw Werven en Overslagpunten
