hoop laatste commit

--- a/src/organisatie.html
+++ b/src/organisatie.html
@@ -123,37 +123,37 @@
       </p>
       <article class="werkwijze__card">
         <p class="werkwijze__card--p">
-          bestuurlijk adviseren van verschillende directies en het
+          Bestuurlijk adviseren van verschillende directies en het
           gemeentebestuur
           <i class="fa-solid fa-list"></i>
         </p>
 
         <p class="werkwijze__card--p">
-          opstellen van een programma van eisen
+          Opstellen van een programma van eisen
           <i class="fa-solid fa-helmet-safety"></i>
         </p>
         <p class="werkwijze__card--p">
-          onderzoek doen naar geschikte locaties
+          Onderzoek doen naar geschikte locaties
           <i class="fa-solid fa-location-dot"></i>
         </p>
         <p class="werkwijze__card--p">
-          controleren van het budget in relatie tot de ambities
+          Controleren van het budget in relatie tot de ambities
           <i class="fa-solid fa-couch"></i>
         </p>
         <p class="werkwijze__card--p">
-          aansturen van een ontwerptraject
+          Aansturen van een ontwerptraject
           <i class="fa-solid fa-person-shelter"></i>
         </p>
         <p class="werkwijze__card--p">
-          organiseren van selecties en aanbestedingen
+          Organiseren van selecties en aanbestedingen
           <i class="fa-solid fa-house"></i>
         </p>
         <p class="werkwijze__card--p">
-          voorbereiden en coördineren van de bouw
+          Voorbereiden en coördineren van de bouw
           <i class="fa-solid fa-door-open"></i>
         </p>
         <p class="werkwijze__card--p">
-          verzorgen van het feestje rond de oplevering.
+          Verzorgen van het feestje rond de oplevering.
           <i class="fa-solid fa-champagne-glasses"></i>
         </p>
       </article>
