--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,800;1,300;1,400;1,500&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.31/vue.global.prod.js" defer></script>
     <script src="js/app.js" defer></script>
   </head>
   <body id="app">
