--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>GemeenteAmsterdam BMV</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -22,7 +25,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="img/gemeente.png" alt="logo" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -47,7 +50,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#about"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="home button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -57,7 +60,7 @@
         Bouwmanagement en Maatschappelijk Vastgoed
       </h2>
       <figure class="about__imgFigure">
-        <img src="img/about.jpg" alt="" class="about__img" />
+        <img src="img/about.jpg" alt="about" class="about__img" />
       </figure>
       <h2 class="about__h2">Bijdragen aan een toekomstbestendige stad</h2>
       <p class="about__text">
@@ -73,14 +76,14 @@
         voorzieningen, voor huidige bewoners en toekomstige generaties.
       </p>
       <figure class="about__imgFigure2">
-        <img src="img/about2.jpg" alt="" class="about__img" />
+        <img src="img/about2.jpg" alt="tweede img over about" class="about__img" />
       </figure>
     </section>
     <section class="nextPage">
       <article class="nextPage__card">
         <h2 class="nextPage__h2">Organisatie</h2>
         <figure class="nextPage__figureImg">
-          <img src="img/organisatie.jpg" alt="" class="nextPage__img" />
+          <img src="img/organisatie.jpg" alt="organisatie link" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
           De BMV van de Gemeente Amsterdam is de spil van gemeenschapsdiensten.
@@ -90,7 +93,7 @@
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="src/organisatie.html"
-            ><button class="nextPage__arrowButton">
+            ><button class="nextPage__arrowButton"  aria-label="home button">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
@@ -98,7 +101,7 @@
       <article class="nextPage__card">
         <h2 class="nextPage__h2">Projecten</h2>
         <figure class="nextPage__figureImg">
-          <img src="img/projecten.jpg" alt="" class="nextPage__img" />
+          <img src="img/projecten.jpg" alt="projecten link" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
           Ontdek de innovatieve projecten van de BMV Gemeente Amsterdam. Van
@@ -108,7 +111,7 @@
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="src/projecten.html"
-            ><button class="nextPage__arrowButton">
+            ><button class="nextPage__arrowButton"  aria-label="home button">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
@@ -116,7 +119,7 @@
       <article class="nextPage__card">
         <h2 class="nextPage__h2">Werken bij</h2>
         <figure class="nextPage__figureImg">
-          <img src="img/werkenbij.jpg" alt="" class="nextPage__img" />
+          <img src="img/werkenbij.jpg" alt="werken link" class="nextPage__img" />
         </figure>
         <p class="nextPage__p">
           Maak deel uit van de BMV Gemeente Amsterdam en draag bij aan het
@@ -126,7 +129,7 @@
         </p>
         <figure class="nextPage__buttonWrapper">
           <a class="nextPage__arrowLink" href="src/werkenbij.html"
-            ><button class="nextPage__arrowButton">
+            ><button class="nextPage__arrowButton"  aria-label="home button">
               <i class="nextPage__arrowI fa-solid fa-arrow-right"></i></button
           ></a>
         </figure>
