--- a/projecten/renovatiebos.html
+++ b/projecten/renovatiebos.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Bostheater</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -25,7 +28,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -53,7 +56,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#project"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="renovatie button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -93,7 +96,7 @@
           class="about__card--arrowLink"
           target="_blank"
           href="https://bostheater.nl/"
-          ><button class="about__card--arrowButton">
+          ><button class="about__card--arrowButton" aria-label="renovatie button">
             Lees Meer
             <i
               class="about__card--arrowIcon fa-solid fa-arrow-right"
@@ -106,7 +109,7 @@
 
       <article class="project__article">
         <figure class="project__figure">
-          <img src="../img/bos-1.png" alt="" class="project__img" />
+          <img src="../img/bos-1.png" alt="bos-1" class="project__img" />
           <p class="project__p">Impressiebeeld van de kleedkamers</p>
 
         </figure>
