--- a/projecten/afc.html
+++ b/projecten/afc.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>AFC</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -25,7 +28,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -53,7 +56,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#project"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="afc button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -72,7 +75,7 @@
       </p>
 
       <figure class="project__figure">
-        <img src="../img/afc-1.jpg" alt="" class="project__img" />
+        <img src="../img/afc-1.jpg" alt="afc foto 1" class="project__img" />
       </figure>
 
       <p class="project__text">
@@ -82,7 +85,7 @@
       </p>
       <figure class="about__card--buttonWrapper">
         <a class="about__card--arrowLink" target="_blank" href="https://www.afc.nl/"
-          ><button class="about__card--arrowButton">
+          ><button class="about__card--arrowButton" aria-label="afc button">
             Lees Meer <i
               class="about__card--arrowIcon fa-solid fa-arrow-right"
             ></i></button
