--- a/projecten/spinoza.html
+++ b/projecten/spinoza.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Spinoza20first</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -25,7 +28,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -51,7 +54,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#project"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="spinoza button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -98,10 +101,10 @@
      
       <article class="project__article">
         <figure class="project__figureimg">
-            <img src="../img/spinoza-1.jpg" alt="" class="project__img">
+            <img src="../img/spinoza-1.jpg" alt="spinoza-1" class="project__img">
           </figure>
           <figure class="project__figureimg">
-            <img src="../img/spinoza-2.jpg" alt="" class="project__img">
+            <img src="../img/spinoza-2.jpg" alt="spinoza-2" class="project__img">
           </figure>
       </article>
 
