--- a/projecten/werven.html
+++ b/projecten/werven.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Nieuwbouw Werven</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -25,7 +28,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -53,7 +56,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#project"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="werven button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -74,7 +77,7 @@
       </p>
 
       <figure class="project__figure">
-        <img src="../img/werven-1.jpg" alt="" class="project__img" />
+        <img src="../img/werven-1.jpg" alt="werven-1" class="project__img" />
         <p class="project__p">Den Brielstraat, Witteveen + Bos</p>
       </figure>
 
@@ -92,7 +95,7 @@
           class="about__card--arrowLink"
           target="_blank"
           href="https://login.microsoftonline.com/72fca1b1-2c2e-4376-a445-294d80196804/oauth2/authorize?client%5Fid=00000003%2D0000%2D0ff1%2Dce00%2D000000000000&response%5Fmode=form%5Fpost&response%5Ftype=code%20id%5Ftoken&resource=00000003%2D0000%2D0ff1%2Dce00%2D000000000000&scope=openid&nonce=9AB774296FAF9B24A47AE80E6381A43E37BE73E9BC3B3F5B%2DD594FBCB982FA3EDED088ABE095A001E4AA3AD12502D394472C13179D56F4069&redirect%5Furi=https%3A%2F%2Fhoofdstad%2Esharepoint%2Ecom%2F%5Fforms%2Fdefault%2Easpx&state=OD0w&claims=%7B%22id%5Ftoken%22%3A%7B%22xms%5Fcc%22%3A%7B%22values%22%3A%5B%22CP1%22%5D%7D%7D%7D&wsucxt=1&cobrandid=11bd8083%2D87e0%2D41b5%2Dbb78%2D0bc43c8a8e8a&client%2Drequest%2Did=bef3f8a0%2D0037%2D7000%2Dec9d%2D018ecfbe7a2c"
-          ><button class="about__card--arrowButton">
+          ><button class="about__card--arrowButton" aria-label="werven button">
             Lees Meer
             <i
               class="about__card--arrowIcon fa-solid fa-arrow-right"
@@ -105,11 +108,11 @@
 
       <article class="project__article">
         <figure class="project__figureimg">
-          <img src="../img/werven-2.jpg" alt="" class="project__img" />
+          <img src="../img/werven-2.jpg" alt="werven-2" class="project__img" />
           <p class="project__p">Volendammerweg Stedenbouwkundige inpassing nieuwbouw, Witteveen + Bos</p>
         </figure>
         <figure class="project__figureimg">
-          <img src="../img/werven-3.png" alt="" class="project__img" />
+          <img src="../img/werven-3.png" alt="werven-3" class="project__img" />
           <p class="project__p">Volendammerweg Inrichting terrein nieuwe situatie, Witteveen + Bos
         </p>
         </figure>
