--- a/src/organisatie.html
+++ b/src/organisatie.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Organisatie</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -51,7 +54,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#about"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="organisatie button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -80,7 +83,7 @@
         sport, spel, kunst en cultuur.
       </p>
       <figure class="about__imgFigure2">
-        <img src="../img/organisatie-1.jpg" alt="" class="about__img" />
+        <img src="../img/organisatie-1.jpg" alt="organisatie foto 1" class="about__img" />
       </figure>
 
       <p class="about__text">
@@ -92,7 +95,7 @@
       </p>
       <article class="about__card">
         <figure class="about__card--imgwrapper">
-          <img src="../img/organisatie-2.jpg" alt="" class="about__card--img" />
+          <img src="../img/organisatie-2.jpg" alt="organisatie foto 2" class="about__card--img" />
         </figure>
         <div class="about__card--textwrapper">
           <h2 class="about__card--h2">Onze Werkwijze</h2>
@@ -103,7 +106,7 @@
           </p>
           <figure class="about__card--buttonWrapper">
             <a class="about__card--arrowLink" href="#werkwijze"
-              ><button class="about__card--arrowButton">
+              ><button class="about__card--arrowButton" aria-label="organisatie button">
                 Lees Meer<i
                   class="about__card--arrowIcon fa-solid fa-arrow-right"
                 ></i></button
@@ -165,7 +168,7 @@
         aan de mogelijkheden in het gebied, de kosten en de planning.
       </p>
       <figure class="about__imgFigure2">
-        <img src="../img/organisatie-3.jpg" alt="" class="about__img" />
+        <img src="../img/organisatie-3.jpg" alt="organisatie foto 3" class="about__img" />
       </figure>
       <h2 class="about__h2">BMV-teams</h2>
       <h3 class="about__h3">
