--- a/src/projecten.html
+++ b/src/projecten.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Opdrachten en Projecten</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -22,7 +25,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -48,7 +51,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#projecten"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton" aria-label="werkenbij button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
