--- a/src/werkenbij.html
+++ b/src/werkenbij.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Gemeente Amsterdam">
+    <meta name="keywords" content="HTML, meta, metadata, web development">
+    <meta name="author" content="Mert Korkmaz">
     <title>Werken Bij</title>
     <script
       src="https://kit.fontawesome.com/cb4527b064.js"
@@ -21,7 +24,7 @@
       <header class="header">
         <div class="header__logowrapper">
           <figure class="header__logo">
-            <img src="../img/gemeente.png" alt="" class="header__logoimg" />
+            <img src="../img/gemeente.png" alt="gemeente foto" class="header__logoimg" />
           </figure>
         </div>
         <ul class="header__ul">
@@ -47,7 +50,7 @@
       </div>
       <figure class="home__buttonWrapper">
         <a class="home__arrowLink" href="#werkenbij"
-          ><button class="home__arrowButton">
+          ><button class="home__arrowButton"  aria-label="werkenbij button">
             <i class="home__arrowI fa-solid fa-arrow-down"></i></button
         ></a>
       </figure>
@@ -84,11 +87,11 @@
           naar capaciteit.BMV@amsterdam.nl.
         </p>
         <figure class="werkenbij__article--figure">
-          <img src="../img/werken.jpg" alt="" class="werkenbij__article--img">
+          <img src="../img/werken.jpg" alt="werken foto" class="werkenbij__article--img">
         </figure>
         <figure class="about__card--buttonWrapper">
           <a class="about__card--arrowLink" target="_blank" href="https://werkenbij.amsterdam.nl/"
-            ><button class="about__card--arrowButton">
+            ><button class="about__card--arrowButton" aria-label="werkenbij button" >
               vacatures <i
                 class="about__card--arrowIcon fa-solid fa-arrow-right"
               ></i></button
